--- a/package.json
+++ b/package.json
@@ -21,9 +21,10 @@
     "@types/morgan": "^1.9.2",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.9",
-    "typescript": "^4.3.5"
+    "typescript": "^4.5.4"
   },
   "dependencies": {
+    "@types/mongoose": "^5.11.97",
     "bcrypt": "^5.0.1",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
@@ -32,6 +33,7 @@
     "express-validator": "^6.12.0",
     "helmet": "^4.6.0",
     "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.1.6",
     "mysql2": "^2.2.5",
     "sequelize": "^6.6.4",
     "sequelize-cli": "^6.2.0"
