--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "tsc": "tsc",
     "ts": "tsc -w",
-    "dev": "nodemon ./build/index.js"
+    "dev": "cross-env NODE_ENV=development nodemon ./build/index.js",
+    "prod": "cross-env NODE_ENV=production nodemon ./build/index.js"
   },
   "keywords": [],
   "author": "",
@@ -19,6 +20,7 @@
     "@types/helmet": "^4.0.0",
     "@types/jsonwebtoken": "^8.5.3",
     "@types/morgan": "^1.9.2",
+    "cross-env": "^7.0.3",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.9",
     "typescript": "^4.5.4"
