--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -22,5 +22,4 @@ jobs:
         node-version: 12.x
         cache: 'npm'
     - run: npm i
-    - run: npm run build --if-present
-    - run: npm test
+    - run: npm run tsc
