--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "tsc": "tsc",
+    "tsc": "cross-env NODE_ENV=production tsc",
     "ts": "tsc -w",
     "dev": "cross-env NODE_ENV=development nodemon ./build/index.js",
     "prod": "cross-env NODE_ENV=production nodemon ./build/index.js"
