--- a/.github/workflows/nodejs-cd.yml
+++ b/.github/workflows/nodejs-cd.yml
@@ -35,4 +35,6 @@ jobs:
             git pull origin master
             git status
             npm install --only=prod
+            rm -rf ./build
+            npm run tsc prod
             pm2 restart JakselTranslate
