--- a/package.json
+++ b/package.json
@@ -36,9 +36,6 @@
     "express-validator": "^6.12.0",
     "helmet": "^4.6.0",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.1.6",
-    "mysql2": "^2.2.5",
-    "sequelize": "^6.6.4",
-    "sequelize-cli": "^6.2.0"
+    "mongoose": "^6.1.6"
   }
 }
