--- a/.github/workflows/nodejs-cd.yml
+++ b/.github/workflows/nodejs-cd.yml
@@ -20,9 +20,6 @@ jobs:
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v2
-      
       - name: Deploy using ssh
         uses: appleboy/ssh-action@master
         with:
@@ -35,5 +32,5 @@ jobs:
             git pull origin master
             git status
             npm install --only=prod
-            npm run tsc-prod
+            npm run tsc
             pm2 restart ApiJakselTranslate --update-env
