--- a/.github/workflows/nodejs-cd.yml
+++ b/.github/workflows/nodejs-cd.yml
@@ -32,5 +32,5 @@ jobs:
             git pull origin master
             git status
             npm install --only=prod
-            npm run tsc
+            npm run tsc-prod
             pm2 restart ApiJakselTranslate --update-env
