--- a/.github/workflows/nodejs-cd.yml
+++ b/.github/workflows/nodejs-cd.yml
@@ -30,6 +30,7 @@ jobs:
           script: |
             cd ~/apps/api/express-jaksel-translate
             git pull origin master
+            nvm use 16.9.1
             npm install --only=prod
             npm run tsc-prod
             pm2 restart ApiJakselTranslate --update-env
