--- a/.github/workflows/nodejs-cd.yml
+++ b/.github/workflows/nodejs-cd.yml
@@ -32,5 +32,5 @@ jobs:
             git pull origin master
             npm install --only=prod
             git status
-      - run: npm run tsc-prod
+            npm run tsc-prod
       - run: pm2 restart ApiJakselTranslate --update-env
