--- a/.github/workflows/nodejs-cd.yml
+++ b/.github/workflows/nodejs-cd.yml
@@ -20,6 +20,9 @@ jobs:
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
+      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+      - uses: actions/checkout@v2
+      
       - name: Deploy using ssh
         uses: appleboy/ssh-action@master
         with:
@@ -30,17 +33,8 @@ jobs:
           script: |
             cd ~/apps/api/express-jaksel-translate
             git pull origin master
-            npm install --only=prod
             git status
+            npm install --only=prod
+            rm -rf ./build
             npm run tsc-prod
-      
-      - name: Pm2 Restart
-        uses: appleboy/ssh-action@master
-        with:
-          host: ${{ secrets.HOST }}
-          username: ${{ secrets.USERNAME }}
-          key: ${{ secrets.PRIVATE_KEY }}
-          port: 22
-          script: |
-            cd ~/apps/api/express-jaksel-translate
-            pm2 restart ApiJakselTranslate --update-env
+            pm2 restart ApiJakselTranslate
