--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "express-validator": "^6.12.0",
     "helmet": "^4.6.0",
     "jsonwebtoken": "^8.5.1",
+    "mongodb": "^4.3.1",
     "mongoose": "^6.1.6"
   }
 }
