--- a/.github/workflows/nodejs-cd.yml
+++ b/.github/workflows/nodejs-cd.yml
@@ -20,9 +20,6 @@ jobs:
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v2
-      
       - name: Deploy using ssh
         uses: appleboy/ssh-action@master
         with:
@@ -32,6 +29,7 @@ jobs:
           port: 22
           script: |
             cd ~/apps/api/express-jaksel-translate
+            git restore .
             git pull origin master
             git status
             npm install --only=prod
